received msg and auto boot done

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -73,6 +73,14 @@
                 <action android:name="android.intent.action.SEND_MESSAGE" />
             </intent-filter>
         </receiver>
+       
+         <!-- Require sender permissions to prevent SMS spoofing -->
+        <receiver android:name=".transaction.PrivilegedSmsReceiver"
+            android:permission="android.permission.BROADCAST_SMS">
+            <intent-filter android:priority="1000">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </receiver>
 
     </application>
 </manifest>
