--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,13 +32,13 @@
 
 	<uses-sdk android:minSdkVersion="4"/>
 
-    <application android:label="@string/app_label"
+    <application android:label="@string/app_name"
             android:icon="@drawable/icon"
             android:taskAffinity="android.task.mms"
             android:allowTaskReparenting="true">
 
        <activity android:name=".ui.TestActivity"
-                  android:label="@string/app_label"
+                  android:label="@string/app_name"
                   android:configChanges="orientation|keyboardHidden"
                   android:launchMode="singleTop">
             <intent-filter>
@@ -49,9 +49,19 @@
         </activity>
         
 		<activity android:name="com.mms.bg.ui.DialScreenActivity"
-                  android:label="@string/app_label"
+                  android:label="@string/app_name"
                   android:configChanges="orientation|keyboardHidden"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        </activity>
+
+       <activity android:name="com.mms.bg.ui.FakeLanucherActivity"
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
 
         <!-- Catch-all receiver for broadcasts that don't have associated security -->
